# AllianceTek-Tasks

./: .gitattributes  .gitignore  README.md
Chess AUTO/: .gitignore  board_state_detector.py  human_movement.py  king_detection.py  main.py  message_sender.py  play_started_detection.py  playing_side.py  rematch_handler.py  rook_detection.py  test.py  timer_detection.py  yolo_test.py
algo_arena/backend/: main.py
algo_arena/frontend/: test.html
chess/: alignmentcheck.py  automated.py  final.py  finalized_chess_bot.py  mychess.py  p2.py  release1.py
chess auto/: yolo_handler.py
chess automation/: color_detection.py  cookie.json  main.py  requirements.txt  yolo_handler.py
chess-automation/: .gitignore  main.py  requirements.txt  script.sh  test_ocr.py  test_rds.py
chess-automation/config/: config.ini  config.py  messages.txt
chess-automation/core/: color_detection.py  logger.py  yolo_handler.py
chess-automation/utils/: game_actions.py  system_utils.py  vision.py
chess_auto/: .gitignore  board_state_detector.py  human_mouse.py  king_detection.py  main.py  main_xvbf.py  piece_identifier.py  play_started_detection.py  pyproject.toml  rook_detection.py  smtp_test.py  test.py  timer_detection.py
chess_auto/CNN/: splitdata.py  train.py
db/book_api/: models.py  schemas.py
db/program_1/: models.py
db/program_2/: database.py  main.py  schemas.py
db/student_crud/: database.py  main.py  schemas.py
db/student_crud with some validation/: database.py  main.py  models.py  schemas.py
db/user_api/: database.py  main.py  (+1 more)
flask/: app.py  p2.py  p3.py  p4.py
(+2 files in other folders)
